# homework-2425-02

./: README.md
computer-vision-advanced/facial-verification/api/: .gitignore  main.py  milvus.db  pyproject.toml  sqlite.db  sqlite.db-journal
computer-vision-advanced/facial-verification/api/chromadb/: chroma.sqlite3
computer-vision-advanced/facial-verification/api/common/face/: __init__.py
computer-vision-advanced/facial-verification/api/db/: __init__.py
computer-vision-advanced/facial-verification/api/db/milvus/: __init__.py
computer-vision-advanced/facial-verification/api/face_analyzer/: __init__.py
computer-vision-advanced/facial-verification/api/face_analyzer/insightface/: __init__.py
computer-vision-advanced/facial-verification/api/relational_db/sqlite/: __init__.py
computer-vision-advanced/facial-verification/api/vector_db/: __init__.py
data-mining-and-applications/seminar/models/: pyproject.toml
data-mining-and-applications/seminar/models/assets/: encoders.joblib  scalers.joblib
data-mining-and-applications/seminar/models/src/: experiments.py  persist.py
neural-networks-and-genetic-algorithms/lab-1/: pyproject.toml
neural-networks-and-genetic-algorithms/lab-1/src/: lab_1.ipynb
neural-networks-and-genetic-algorithms/lab-2/: pyproject.toml
neural-networks-and-genetic-algorithms/lab-2/assets/comparisons/: objective=Ackley_d=10.csv  objective=Ackley_d=2.csv  objective=Griewank_d=10.csv  objective=Griewank_d=2.csv  objective=Rastrigin_d=10.csv  objective=Rastrigin_d=2.csv  objective=Rosenbrock_d=10.csv  objective=Rosenbrock_d=2.csv  objective=Sphere_d=10.csv  objective=Sphere_d=2.csv
neural-networks-and-genetic-algorithms/lab-2/reports/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
neural-networks-and-genetic-algorithms/lab-2/src/: cem.py  de.py  main.py  objectives.py
(+44 files in other folders)
