[project]
name = "lab-1"
version = "0.1.0"
description = ""
authors = [{ name = "variphx", email = "variphx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ipykernel", "ipywidgets", "tqdm", "numpy", "matplotlib"]

[tool.poetry]
packages = []
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
